apps/gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    inject-ca-bundle: "true"
